--- a/landing/index2.html
+++ b/landing/index2.html
@@ -36,7 +36,7 @@
       <div class="cover">
         <div class="container">
           <h2>Material Design React Admin</h2>
-          <p class="lead">Material admin is a powerful admin template built with Google Material Design guideline in mind, it comes with tons of useful features and more on the way.</p><a class="btn btn-primary btn-cta btn-raised ui-wave" href="https://themeforest.net/item/material-design-react-admin-with-bootstrap/22433215" target="_blank">Download Material</a>
+          <p class="lead">Material admin is a powerful admin template built with Google Material Design guideline in mind, it comes with tons of useful features and more on the way.</p><a class="btn btn-primary btn-cta btn-raised ui-wave" href="javascript:;" target="_blank">Download Material</a>
         </div>
         <div class="img"><img src="images/preview-1100_569.png"></div>
       </div>
@@ -171,7 +171,7 @@
             <div class="col-12 col-md-6 offset-md-6">
               <div class="callout-feature-content scrollreveal">
                 <h4>Enjoy A Cup of Coffee</h4>
-                <div>Why bother coding from scratch, doing all the dirty work yourself when there's already an amazing template out there? Download and build on top of it, so you can spend your valuable time on things far more important and joyful, like enjoy a cup of coffee.</div><a class="btn btn-primary btn-cta btn-raised ui-wave" href="https://themeforest.net/item/material-design-react-admin-with-bootstrap/22433215" target="_blank">Try it Now</a>
+                <div>Why bother coding from scratch, doing all the dirty work yourself when there's already an amazing template out there? Download and build on top of it, so you can spend your valuable time on things far more important and joyful, like enjoy a cup of coffee.</div><a class="btn btn-primary btn-cta btn-raised ui-wave" href="javascript:;" target="_blank">Try it Now</a>
               </div>
             </div>
           </div>
@@ -182,7 +182,7 @@
             <div class="col-12 col-md-6">
               <div class="callout-feature-content scrollreveal">
                 <h4>Spend Time with Loved Ones</h4>
-                <div>Why bother coding from scratch, doing all the dirty work yourself when there's already an amazing template out there? Download and build on top of it, so you can spend your valuable time on things far more important and joyful, like spend time with loved ones.</div><a class="btn btn-primary btn-cta btn-raised ui-wave" href="https://themeforest.net/item/material-design-react-admin-with-bootstrap/22433215" target="_blank">Try it Now</a>
+                <div>Why bother coding from scratch, doing all the dirty work yourself when there's already an amazing template out there? Download and build on top of it, so you can spend your valuable time on things far more important and joyful, like spend time with loved ones.</div><a class="btn btn-primary btn-cta btn-raised ui-wave" href="javascript:;" target="_blank">Try it Now</a>
               </div>
             </div>
           </div>
@@ -271,7 +271,7 @@
           <div class="col-lg-8 mx-auto">
             <div class="cta cta-inline scrollreveal"> 
               <div class="cta-lead">Try it now, get up and running in minutes.</div>
-              <div class="cta-btn"><a class="btn btn-light btn-cta btn-raised ui-wave scrollreveal" href="https://themeforest.net/item/material-design-react-admin-with-bootstrap/22433215" target="_blank">Download Material</a></div>
+              <div class="cta-btn"><a class="btn btn-light btn-cta btn-raised ui-wave scrollreveal" href="javascript:;" target="_blank">Download Material</a></div>
             </div>
           </div>
         </div>
